@@ -1,3 +1,7 @@
+2008-10-10  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* generic/vfs.c: Make use of CONST86 for 8.6a3 support.
+
 2008-08-11  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* http2.6/http.tcl: Merged zlib crc fix from Tcl.
